Fix: Reduce white space above page content

--- a/form-styles.css
+++ b/form-styles.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     padding: 3rem 1rem;
-    margin-bottom: 4em;
     min-height: 70vh;
 }
 
@@ -106,6 +105,7 @@
 .login-bg {
     background-image: url('images/flowershop_image.png');
     background-size: cover;
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     flex-grow: 1;
